added 11_praktiniai_map